--- a/theme/scss/io2013-gdg.scss
+++ b/theme/scss/io2013-gdg.scss
@@ -19,17 +19,11 @@ q, blockquote {
 
 slides > slide {
   color: $gray-4;
-  width: 100% !important;
-  height: 100% !important;
-  left: 0 !important;
-  top: 0 !important;
-  margin: 0 !important;
-  border-radius: 0 !important;
 
   &.title-slide {
     &:after {
       content: '';
-      background: url(../../images/io2013/google-io-lockup-1.png) no-repeat 100% 50%;
+      background: url(../../images/io_extended_logo.png) no-repeat 100% 50%;
       @include background-size(contain);
       position: absolute;
       bottom: $slide-top-bottom-padding + 40;
@@ -56,7 +50,7 @@ slides > slide {
   }
 
   &:not(.nobackground) {
-    background: white url(../../images/gdg_128.png) ($brand-small-icon-size * 2) 98% no-repeat;
+    background: white url(../../images/io_extended_icon.png) ($brand-small-icon-size * 2) 98% no-repeat;
     @include background-size($brand-small-icon-size $brand-small-icon-size);
 
     &:before {
@@ -65,7 +59,7 @@ slides > slide {
       position: absolute;
       bottom: $slide-top-bottom-padding / 2;
       left: $slide-left-right-padding;
-      background: url(../../images/gdg_icon_128.png) no-repeat 0 50%;
+      background: url(../../images/io_extended_icon.png) no-repeat 0 50%;
       @include background-size($brand-small-icon-size $brand-small-icon-size);
       padding-left: $brand-small-icon-size + 10;
       height: $brand-small-icon-size;
@@ -79,5 +73,16 @@ slides > slide {
       right: $slide-left-right-padding;
       line-height: 1.9;
     }
+  }
+}
+
+@media not projection {
+  slides > slide {
+    width: 100% !important;
+    height: 100% !important;
+    left: 0 !important;
+    top: 0 !important;
+    margin: 0 !important;
+    border-radius: 0 !important;
   }
 }
